add new id s for all span icon and add new buttom in html and style and make th left paragraph work with the buttom in js

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 </head>
 <body>
   <main>
-    <section id="left">
+    <section id="section_left">
       <h3> Work experience:</h3><hr>
-      <p>2005 – 2015   Teqaniat Co. <br> Damascus – Syria <br>Corporate sales executive <br>
+      <button id="nextButt">Next</button>
+      <button id="backButt">Back to the first</button>
+      <p class="workExper_paragraph">2005 – 2015   Teqaniat Co. <br> Damascus – Syria <br>Corporate sales executive <br>
          This Company is active in IT and Networks Solution in Syria.<br>
          Reporting to sales Manager and creative ways to make IT technology add value to the customer
          Business, I am responsible for:<br>
@@ -22,14 +24,14 @@
          Provide IT solutions by analyzing customer's need.<br>
          Work with professional IT team to achieve goals.<br>
          Monitoring achievements (volume & profits).</p>
-      <p>2003 – 2005   EROS GROUP <br> UAE – DUBAI <br> Senior Sales executive<br>
+      <p class="workExper_paragraph">2003 – 2005   EROS GROUP <br> UAE – DUBAI <br> Senior Sales executive<br>
           This Company was active in sales of Electronic and IT Equipments (SAMSUNG Brand) in UAE.<br>
           Reporting to retail sales manager and being Showroom in charge, I was Responsible for:<br>
           Lead a team of sales officer to achieve Showroom target.<br>
           Monitoring Stock availability and send reports to the management.<br>
           Manage the orders from warehouse to customers.<br>
           Monitoring achievements (volume & profits). </p>
-      <p>2002 – 2003   PC1 Company <br>Damascus – Syria<br>Sales executive <br>
+      <p class="workExper_paragraph">2002 – 2003   PC1 Company <br>Damascus – Syria<br>Sales executive <br>
           This Company was active in sales and distribution of IT Equipment in Syria.<br>
           Reporting to sales Manager and supervise a team of Salesmen, I was responsible for:<br>
           Supervise a team of salesmen to achieve our target.<br>
@@ -37,15 +39,15 @@
           Developing and supervising a small network of local distributors.<br>
           Monitoring Stock availability and send reports to the management.</p>
     </section>
-    <section id="mid">
-      <span><img src="png/book.png" ></span><br><br>
-      <span><img src="png/calendar.png" ></span><br><br>
-      <span><img src="png/contract.png" ></span><br><br>
-      <span><img src="png/graph.png" ></span><br><br>
-      <span><img src="png/network.png" ></span>
+    <section id="section_mid">
+      <span id="education"><img src="png/book.png" ></span><br><br>
+      <span id="projects"><img src="png/calendar.png" ></span><br><br>
+      <span id="certifi"><img src="png/contract.png" ></span><br><br>
+      <span id="programes"><img src="png/graph.png" ></span><br><br>
+      <span id="lang_special"><img src="png/network.png" ></span>
     </section>
-    <section id="right">
-      <img id="personal" src="pictures/murha.jpg">
+    <section id="section_right">
+      <img id="personal_pic" src="pictures/murha.jpg">
       <h2>Murhaf Orfali</h2>
       <h3>Web Developer</h3>
       <hr>
