make the onfly part in js file and add class for it in css

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
          the technology.
          I am continually evaluating and upgrading my skills  .</p>
          <hr>
-      <a href="#"><img src="png/facebook.png" ></a>
-      <a href="#"><img src="png/whatsapp.png" ></a>
-      <a href="#"><img src="png/mail.png" ></a>
+      <a href="https://www.facebook.com/"><img src="png/facebook.png" ></a>
+      <a href="https://www.whatsapp.com/"><img src="png/whatsapp.png" ></a>
+      <a href="https://mail.google.com/"><img src="png/mail.png" ></a>
       <a href="#"><img src="png/smartphone.png" ></a>
     </section>
 
