--- a/index.html
+++ b/index.html
@@ -8,62 +8,109 @@
   <link rel="stylesheet" href="profile.css">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
   <script type="text/javascript" src="profile.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
   <title>My Profile</title>
 </head>
 <body>
-  <main>
-    <section id="section_left">
-      <h3> Work experience:</h3><hr>
-      <button id="nextButt">Next</button>
-      <button id="backButt">Back to the first</button>
-      <p class="workExper_paragraph">2005 – 2015   Teqaniat Co. <br> Damascus – Syria <br>Corporate sales executive <br>
+  <section id="startPage">
+    <h1 id="Wellcom">Wellcom to mY Portfolio</h1>
+    <h3 id="startName" >Murhaf Orfali</h3>
+    <p id="startPergh">I am stil lerning Web Developer and this is my passion</p>
+    <button id="startButton">Enter Now</button>
+    <div id="contact">
+      <a href="https://www.facebook.com/murhaf.sy/" target="_blank" title="My facebook!" class="fa fa-facebook-square fa-spin  fa-2x" aria-hidden="true"></a>
+      <a href="https://www.xing.com/profile/Murhaf_Orfali/" target="_blank" title="My XING!" class="fa fa-xing-square text-success fa-spin fa-2x" aria-hidden="true"></a>
+      <a href="https://www.linkedin.com/" target="_blank" title="My Linkedin!" class="fa fa-linkedin-square fa-spin fa-2x" aria-hidden="true"></a>
+      <a href="https://github.com/Murhaf2211" target="_blank" target="_blank" title="My GitHub!" class="fa fa-github-square fa-spin text-body fa-2x" aria-hidden="true"></a>
+      <a href="https://web.de/" target="_blank" target="_blank" title="My Email Address: orfali.murhaf@web.de!" class="fa fa-envelope-o text-light fa-spin fa-2x" aria-hidden="true"></a>
+    </div>
+
+  </section>
+  <main id="mainPage">
+    <div class="contain">
+      <section id="section_right">
+        <img id="personal_pic" src="pictures/n.jpg">
+        <h2>Murhaf Orfali</h2>
+        <h3>Web Developer</h3>
+        <p>I am an ambitious person and a problem solver<br> with a passion for IT Projects and programing , and
+           <br>i like to join a team of like-minded developers.
+          </p>
+      </section>
+      <section id="section_left">
+        <h3> My Work experience:</h3>
+        <div id="demo" class="carousel slide" data-ride="carousel">
+         <!-- Indicators -->
+          <ul class="carousel-indicators">
+            <li data-target="#demo" data-slide-to="0" class="active"></li>
+            <li data-target="#demo" data-slide-to="1"></li>
+            <li data-target="#demo" data-slide-to="2"></li>
+          </ul>
+        <!-- The slideshow -->
+        <div class="carousel-inner">
+         <div class="carousel-item active">
+          <p class="workExper_paragraph">10 years work experience <br>in IT Company<br> Damascus – Syria <br>
          This Company is active in IT and Networks Solution in Syria.<br>
          Reporting to sales Manager and creative ways to make IT technology add value to the customer
-         Business, I am responsible for:<br>
+         Business, I was responsible for:<br>
          Build a good relationship with customers' organizations.<br>
          Provide IT solutions by analyzing customer's need.<br>
          Work with professional IT team to achieve goals.<br>
          Monitoring achievements (volume & profits).</p>
-      <p class="workExper_paragraph">2003 – 2005   EROS GROUP <br> UAE – DUBAI <br> Senior Sales executive<br>
+         </div>
+        <div class="carousel-item">
+         <p class="workExper_paragraph">2 years work experience <br> UAE – DUBAI <br>
           This Company was active in sales of Electronic and IT Equipments (SAMSUNG Brand) in UAE.<br>
-          Reporting to retail sales manager and being Showroom in charge, I was Responsible for:<br>
+          I was Responsible for:<br>
           Lead a team of sales officer to achieve Showroom target.<br>
           Monitoring Stock availability and send reports to the management.<br>
           Manage the orders from warehouse to customers.<br>
           Monitoring achievements (volume & profits). </p>
-      <p class="workExper_paragraph">2002 – 2003   PC1 Company <br>Damascus – Syria<br>Sales executive <br>
+         </div>
+         <div class="carousel-item">
+          <p class="workExper_paragraph">5 years work experience <br>As IT Technician <br>Damascus – Syria<br>
           This Company was active in sales and distribution of IT Equipment in Syria.<br>
-          Reporting to sales Manager and supervise a team of Salesmen, I was responsible for:<br>
-          Supervise a team of salesmen to achieve our target.<br>
-          Monitoring achievements (volume & profits).<br>
-          Developing and supervising a small network of local distributors.<br>
-          Monitoring Stock availability and send reports to the management.</p>
+          I was responsible for:<br>
+          Assist personnel with installation, configuration and ongoing usability of system hardware and software.<br>
+          Offer daily operations and systems support to personnel.<br>
+          Verify functionality of hardware and software components.<br>
+          Troubleshoot hardware and software issues in person, remotely and via phone.<br>
+          Assist employees with computer problems and answer their questions.<br>
+          Conduct daily network backup operations.</p>
+         </div>
+        </div>
+  <!-- Left and right controls -->
+        <a class="carousel-control-prev" href="#demo" data-slide="prev">
+         <i class='fa fa-chevron-left' aria-hidden="true"></i>
+        </a>
+        <a class="carousel-control-next" href="#demo" data-slide="next">
+         <i class='fa fa-chevron-right' aria-hidden="true"></i>
+        </a>
+       </div>
     </section>
-    <section id="section_mid">
-      <span id="education"><img src="png/book.png" ></span><br><br>
-      <span id="projects"><img src="png/calendar.png" ></span><br><br>
-      <span id="certifi"><img src="png/contract.png" ></span><br><br>
-      <span id="programes"><img src="png/graph.png" ></span><br><br>
-      <span id="lang_special"><img src="png/network.png" ></span>
-    </section>
-    <section id="section_right">
-      <img id="personal_pic" src="pictures/murha.jpg">
-      <h2>Murhaf Orfali</h2>
-      <h3>Web Developer</h3>
-      <hr>
-      <p>I am an ambitious person and a problem solver with a passion for IT Projects and programing , and
-         i like to join a team of like-minded developers.
-         I like to find creating logical and innovative solutions to complex problems.
-         i am thorough and precise in everything i do, and i have a keen interest in
-         the technology.
-         I am continually evaluating and upgrading my skills  .</p>
-         <hr>
-      <a href="https://www.facebook.com/"><img src="png/facebook.png" ></a>
-      <a href="https://www.whatsapp.com/"><img src="png/whatsapp.png" ></a>
-      <a href="https://mail.google.com/"><img src="png/mail.png" ></a>
-      <a href="#"><img src="png/smartphone.png" ></a>
-    </section>
+    </div>
 
+    <section id="skills" >
+      <div>
+        <span id="a" title="Click to show!"><img src="pictures/a.jpg" ></span><br><br>
+        <span id="network" title="Click to show!"><img src="pictures/ScannedImage-4.jpg" ></span><br><br>
+        <span id="mcdst" title="Click to show!"><img src="pictures/ScannedImage-6.jpg" ></span><br><br>
+        <span id="ipma" title="Click to show!"><img src="pictures/ScannedImage-7.jpg" ></span><br><br>
+        <span id="b2" title="Click to show!"><img src="pictures/b2.jpg" ></span>
+        <span id="biq" title="Click to show!"><img src="pictures/biq.jpg" ></span>
+      </div>
+      <div>
+      <span id="dci" class="secoundRowSpan" title="Click to show!"><img src="pictures/dci.jpg" ></span>
+      <span id="drk" class="secoundRowSpan" title="Click to show!"><img src="pictures/drk.jpg" ></span>
+      <span id="plc" class="secoundRowSpan" title="Click to show!"><img src="pictures/plc.jpg" ></span>
+     </div>
+    </section>
+    <footer>
+      <h5>Made by Murhaf Orfali © 2019 </h5>
+    </footer>
   </main>
 
 </body>
